# radio-challenge-2026

./: README.md
connection/: Cargo.toml
connection/src/: cache.rs  conn_core.rs  conn_stats.rs  driver.rs  dual_map.rs  lib.rs  packet.rs  periodic.rs  pool.rs  serial.rs  udp.rs
connection/src/packet/: datagrams.rs  deku_helpers.rs
connection/src/protocol/: deku_helpers.rs  mod.rs
connection/src/protocol/proto2025/: datagrams.rs  mod.rs  packet.rs
connection/src/transceivers/: mod.rs  serial.rs  udp.rs
connection/src/utils/: cache.rs  conn_stats.rs  dual_map.rs  id_filter.rs  metrics_analyzer.rs  metrics_logger.rs  metrics_tracker.rs  mod.rs
udp2serial/: Cargo.toml
udp2serial/src/: main.rs  mock.rs  serial.rs
wifi-switcher/: Cargo.toml
wifi-switcher/src/: main.rs  unix.rs
