[package]
name = "connection"
edition.workspace = true
license = "MIT OR Apache-2.0"
rust-version.workspace = true

[features]
default = ["serial", "udp"]
serial = ["dep:mio", "dep:mio-serial", "dep:cobs"]
udp = ["dep:mio", "mio/net", "dep:socket2", "dep:network-interface"]
libudev = ["mio-serial/libudev"] # Better serial discovery on linux, but a compile-time dependency on libudev-dev

[dependencies]
flume.workspace = true
deku.workspace = true
bitvec.workspace = true
log.workspace = true

mio = { workspace = true, features = ["os-poll"], optional = true }

# Serial
cobs = { workspace = true, optional = true }
mio-serial = { workspace = true, optional = true }

# Udp
socket2 = { workspace = true, optional = true }
network-interface = { workspace = true, optional = true }
