[package]
name = "udp2serial"
edition.workspace = true
license = "MIT OR Apache-2.0"
rust-version.workspace = true

[features]
mock = ["dep:hostname"]
libudev = ["serialport/libudev"] # Better serial discovery on linux, but a compile-time dependency on libudev-dev

[dependencies]
serialport.workspace = true
cobs.workspace = true
network-interface.workspace = true
socket2.workspace = true
hostname = { workspace = true, optional = true }
